fix: end turn button z-index, adjust horizontal alignments of hand and field

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -540,7 +540,7 @@ h1 {
     right: 6%;
     top: 45%;
     width: 10%;
-    
+    z-index: 50;
     .hs-wrapper {
       width: 100%;
     }
@@ -566,6 +566,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     z-index: 0;
+    transform: translateX(0.8%);
 
     .slot {
       z-index: 1;
@@ -654,7 +655,7 @@ h1 {
   .inactive-char{
     top: 12.5%;
   }
-  
+   
   .player {
     width: 100%;
     z-index: 20;
@@ -678,7 +679,7 @@ h1 {
     z-index: 5;
     justify-content: center;
     align-items: center;
-    transform: perspective(50em) rotateX(-60deg) translateY(-20%);
+    transform: perspective(50em) rotateX(-60deg) translateY(-20%) translateX(-2.7%);
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
   }
@@ -710,6 +711,7 @@ h1 {
     z-index: 5;
     left: 0;
     right: 0;
+    transform: translateX(-1.7%);
 
 
     @total: 5;
